SERVER-28494 updated globalLock.activeClients.total to reflect number of active readers and writers